27 Mar 2019

Export results in phy-compatible format with jrc export-phy /path/to/your/config.prm
Display summaries after detect and sort, also added an option to display a summary in UI.

20 Mar 2019 (4.0.0-beta release)

- Bugfix: import-ksort didn't use the correct sites for imported spikes; this has been fixed.

Several small bug fixes.

19 Mar 2019

- New split mechanism (allows for multiple splits).
- Users can press g in the waveform view to go to a specific cluster.
- Bugfix: raw traces in chunks 2:end were being extracted nSamplesPad later than they were supposed to; this has been fixed.

12 Mar 2019

- Intan traditional recordings are now supported (but experimental; please report issues reading your Intan files).
- Users can press q in the waveform view to display quality scores for the selected cluster.
  Pressing SHIFT-Q will also export them to the workspace.

Several small bug fixes.

13 Feb 2019
# mToStruct
- throws a warning if eval/parse fails

# import.v3 (formerly import.importv3)
- updates clusterCenters on import to be consistent with nClusters
- checks for hClust consistency on import

12 Feb 2019
# Parameters
- evtGroupRad introduced
- evtMergeRad (formerly maxDist_site_merge_um) (re)implemented to correct an error in parameter usage
- selection of evtDetectRad, evtGroupRad, or evtMergeRad as the parameter of choice has been corrected in some places
- exact usage of nSitesExcl clarified in docs
- nPassesMerge had reported an incorrect default value in the docs; this has been fixed

# JRC
- hCfg is now a hidden attribute but publicly settable
- `compile` command is now (re)implemented
- `auto` is now `recluster`
- steps in pipeline have been broken out into their own functions (run calls each in turn)
- saveRes and saveBinaries are separate functions
- saveRes can be called with a forceOverwrite parameter
- user is warned if spikesRaw, spikesFilt, spikeFeatures are empty on load

# Config
- automatically set to error if rawRecordings is empty