@@ -131,7 +131,7 @@ function dispFeatures = getFigProjFeatures(hClust, sitesToShow, selected)
                           'bgXData', bgXData, ...
                           'fgYData', fgYData, ...
                           'fgXData', fgXData, ...
-                          'fgSpikes', fgSpikes, ...
+                          'fgSpikes', fgSpikes, ... % for finding spikes to split off
                           'fg2YData', fg2YData, ...
                           'fg2XData', fg2XData, ...
                           'fg2Spikes', fg2Spikes);
